# confluence_wiki

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  alembic_upgrade_head.md  db_migration.md  pyproject.toml  sqlite_scale.md
alembic/: env.py
alembic/versions/: 20260406_000001_initial_schema.py  20260407_000002_persistent_page_history.py  20260407_000003_knowledge_documents.py  20260411_000004_sync_leases.py  20260413_000005_search_index_and_uniques.py
app/: cli.py  demo_seed.py  main.py
app/api/: routes.py
app/clients/: confluence.py  rate_limit.py
app/core/: config.py  knowledge.py  markdown.py  obsidian.py  slugs.py
app/db/: base.py  models.py  session.py
app/graph/: builder.py  schemas.py
app/llm/: text_client.py  vision_client.py
app/parser/: storage.py  tables.py
app/services/: assets.py  auth_service.py  cql.py  index_builder.py  internal_scheduler.py  knowledge_service.py  lint_service.py  query_jobs.py  schedule_service.py  search_index.py  space_registry.py  sync_lease.py  sync_service.py  sync_window.py  wiki_qa.py  wiki_writer.py
app/static/: admin-operations.js  app.css  graph.js  query-generator.js  wiki-assistant.js
app/templates/: admin_operations.html  admin_users.html  base.html  graph.html  index.html  knowledge_board.html  login.html  page.html  page_edit.html  page_history.html
docs/plans/: 2026-04-06-confluence-wiki-design.md  2026-04-06-confluence-wiki.md  2026-04-07-cli-sync-logging-design.md  2026-04-07-cli-sync-logging.md  2026-04-07-global-knowledge-gist-design.md  (+20 more)
tests/: conftest.py  test_cli.py
(+39 files in other folders)
